# optimization

./: README.md  optimizer_results.ipynb  pyproject.toml
examples/: example_aawasser_total.py  example_pydefine.py
results/: opt.json
src/enduseroptimizer/: __init__.py  config.py  consumer.py  enduser.py  grid.py  heatconsumer.py  heatnode.py  heatproducer.py  heatstorage.py  producer.py  storage.py  streamlit_display.py
tests/: conftest.py  test_ext.py  test_opt.py
